--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             background-color: #f4f4f4;
         }
         header {
-            background-color: #4CAF50;
+            background-color: #9370DB;
             color: white;
             padding: 1rem 0;
             text-align: center;
@@ -58,8 +58,8 @@
 </head>
 <body>
     <header>
-        <h1>Dr. [Your Name]</h1>
-        <p>Ph.D. in Human Centered Computing</p>
+        <h1>Marie Sakowicz</h1>
+        <p>Ph.D. student in Human Centered Computing</p>
     </header>
     <nav>
         <a href="#bio">Bio</a>
@@ -70,32 +70,29 @@
     <div class="container">
         <div id="bio" class="section">
             <h2>Bio</h2>
-            <p>Welcome to my portfolio. I am Dr. [Your Name], a Ph.D. student in Human Centered Computing. My research focuses on [briefly describe your research focus]. I am passionate about [mention any passions or interests related to your field].</p>
+            <p>Welcome to my portfolio. I am Marie Sakowicz, a Ph.D. student in Human Centered Computing at the Univerisity of Maryland Baltimore County. My research focuses on the use of AI-enabled technologies in education. I am passionate about using technology to enhance the human experience and learning outcomes.</p>
         </div>
         <div id="research" class="section">
             <h2>Research</h2>
             <p>My research primarily involves the use of artificial intelligence and interactive technologies in special education. I aim to create more inclusive learning environments through innovative AI applications.</p>
             <ul>
-                <li><strong>Project 1:</strong> [Brief description of Project 1]</li>
-                <li><strong>Project 2:</strong> [Brief description of Project 2]</li>
-                <li><strong>Project 3:</strong> [Brief description of Project 3]</li>
+                <li><strong>Project 1:</strong> [Use of AI-enabled Technologies in Special Education]</li>
+         
             </ul>
         </div>
         <div id="publications" class="section">
             <h2>Publications</h2>
             <ul>
-                <li><strong>Publication 1:</strong> [Details of Publication 1]</li>
-                <li><strong>Publication 2:</strong> [Details of Publication 2]</li>
-                <li><strong>Publication 3:</strong> [Details of Publication 3]</li>
+                
             </ul>
         </div>
         <div id="contact" class="section">
             <h2>Contact</h2>
-            <p>If you would like to get in touch, please email me at <a href="mailto:your-email@example.com">your-email@example.com</a> or connect with me on <a href="https://www.linkedin.com/in/your-profile" target="_blank">LinkedIn</a>.</p>
+            <p>If you would like to get in touch, please email me at <a href="mailto:msakowi1@umbc.edu">msakowi1@umbc.edu</a> or connect with me on <a href="www.linkedin.com/in/marie-sakowicz-38516ab7" target="_blank">LinkedIn</a>.</p>
         </div>
     </div>
     <footer>
-        <p>&copy; 2024 Dr. [Your Name]. All rights reserved.</p>
+        <p>&copy; 2024 Marie Sakowicz. All rights reserved.</p>
     </footer>
 </body>
 </html>
