--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <h2>Research</h2>
             <p>My research primarily involves the use of artificial intelligence and interactive technologies in special education. I aim to create more inclusive learning environments through innovative AI applications.</p>
             <ul>
-                <li><strong>Project 1:</strong> [Use of AI-enabled Technologies in Special Education]</li>
+                <li><strong>Project 1:</strong> Use of AI-enabled Technologies in Special Education</li>
          
             </ul>
         </div>
