--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 <body>
     <header>
         <h1>Marie Sakowicz</h1>
-        <p>Ph.D. student in Human Centered Computing</p>
+        <p>Ph.D. Student in Human Centered Computing</p>
     </header>
     <nav>
         <a href="#bio">Bio</a>
@@ -70,7 +70,7 @@
     <div class="container">
         <div id="bio" class="section">
             <h2>Bio</h2>
-            <p>Welcome to my portfolio. I am Marie Sakowicz, a Ph.D. student in Human Centered Computing at the Univerisity of Maryland Baltimore County. My research focuses on the use of AI-enabled technologies in education. I am passionate about using technology to enhance the human experience and learning outcomes.</p>
+            <p>Welcome to my portfolio. I am Marie Sakowicz, a Ph.D. student in Human Centered Computing at the Univerisity of Maryland Baltimore County. My research focuses on the use of AI-enabled technologies in education. I am passionate about using technology to enhance the human experience and improve learning outcomes.</p>
         </div>
         <div id="research" class="section">
             <h2>Research</h2>
