--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         </div>
         <div id="contact" class="section">
             <h2>Contact</h2>
-            <p>If you would like to get in touch, please email me at <a href="mailto:msakowi1@umbc.edu">msakowi1@umbc.edu</a> or connect with me on <a href="www.linkedin.com/in/marie-sakowicz-38516ab7" target="_blank">LinkedIn</a>.</p>
+            <p>If you would like to get in touch, please email me at <a href="mailto:msakowi1@umbc.edu">msakowi1@umbc.edu</a> or connect with me on <a href="https://www.linkedin.com/in/marie-sakowicz-38516ab7" target="_blank">LinkedIn</a>.</p>
         </div>
     </div>
     <footer>
