--- a/index.html
+++ b/index.html
@@ -3,96 +3,200 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ph.D. Student Portfolio</title>
+    <title>Marie Sakowicz - Ph.D. Student Portfolio</title>
     <style>
+        /* General Studies */
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Arial', sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f4;
+            line-height: 1.6;
+            color: #333;
+            background-color: #f4f4f9;
         }
+
         header {
-            background-color: #9370DB;
+            background: linear-gradient(90deg, #0044cc, #0066ff);
             color: white;
-            padding: 1rem 0;
+            padding: 40px 10px;
             text-align: center;
         }
+
+        header img {
+            border-radius: 50%;
+            width: 150px;
+            height: 150px;
+            margin-bottom: 15px;
+        }
+
+        header h1 {
+            margin: 0;
+            font-size: 2.5em;
+        }
+
+        header p {
+            font-size: 1.2em;
+            margin: 5px 0 20px;
+        }
+
         nav {
-            display: flex;
-            justify-content: center;
-            background-color: #333;
+            background: #eee;
+            padding: 10px;
+            text-align: center;
         }
+
         nav a {
-            color: white;
-            padding: 1rem;
+            margin: 0 15px;
             text-decoration: none;
-            text-align: center;
+            color: #0044cc;
+            font-weight: bold;
         }
+
         nav a:hover {
-            background-color: #ddd;
-            color: black;
+            text-decoration: underline;
         }
+
         .container {
-            padding: 2rem;
+            max-width: 1200px;
+            margin: 20px auto;
+            padding: 20px;
         }
-        .section {
-            background-color: white;
-            margin: 1rem 0;
-            padding: 1rem;
-            border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+
+        section {
+            margin-bottom: 40px;
         }
-        .section h2 {
-            margin-top: 0;
+
+        h2 {
+            color: #0044cc;
+            border-bottom: 2px solid #0044cc;
+            display: inline-block;
+            margin-bottom: 10px;
         }
-        footer {
-            background-color: #333;
+
+        .skills {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 15px;
+        }
+
+        .skills div {
+            background: #0044cc;
             color: white;
+            padding: 10px 15px;
+            border-radius: 5px;
+        }
+
+        .projects {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 20px;
+        }
+
+        .project {
+            background: white;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            padding: 20px;
+            border-radius: 5px;
+            transition: transform 0.3s ease;
+        }
+
+        .project:hover {
+            transform: scale(1.05);
+        }
+
+        .project img {
+            max-width: 100%;
+            border-radius: 5px;
+        }
+
+        footer {
             text-align: center;
-            padding: 1rem 0;
-            position: fixed;
-            width: 100%;
-            bottom: 0;
+            padding: 10px 0;
+            background: #0044cc;
+            color: white;
+        }
+
+        @media (max-width: 768px) {
+            header h1 {
+                font-size: 2em;
+            }
         }
     </style>
 </head>
 <body>
     <header>
+        <img src="your-profile-picture.jpg" alt="Marie Sakowicz">
         <h1>Marie Sakowicz</h1>
-        <p>Ph.D. Student in Human Centered Computing</p>
+        <p>Ph.D. Student in Human-Centered Computing | Researcher | Innovator</p>
     </header>
+
     <nav>
-        <a href="#bio">Bio</a>
-        <a href="#research">Research</a>
+        <a href="#about">About</a>
+        <a href="#skills">Skills</a>
+        <a href="#projects">Projects</a>
         <a href="#publications">Publications</a>
         <a href="#contact">Contact</a>
     </nav>
+
     <div class="container">
-        <div id="bio" class="section">
-            <h2>Bio</h2>
-            <p>Welcome to my portfolio. I am Marie Sakowicz, a Ph.D. student in Human Centered Computing at the Univerisity of Maryland Baltimore County. My research focuses on the use of AI-enabled technologies in education. I am passionate about using technology to enhance the human experience and improve learning outcomes.</p>
-        </div>
-        <div id="research" class="section">
-            <h2>Research</h2>
-            <p>My research primarily involves the use of artificial intelligence and interactive technologies in special education. I aim to create more inclusive learning environments through innovative AI applications.</p>
-            <ul>
-                <li><strong>Project 1:</strong> Use of AI-enabled Technologies in Special Education</li>
-         
-            </ul>
-        </div>
-        <div id="publications" class="section">
+        <section id="about">
+            <h2>About Me</h2>
+            <p>
+                I am a Ph.D. student specializing in Human-Centered Computing at University Maryland Baltimore County. My research focuses on the use of AI-enabled technologies in education. I am passionate about using technology to enhance the human experience and improve learning outcomes.
+            </p>
+        </section>
+
+        <section id="skills">
+            <h2>Skills</h2>
+            <div class="skills">
+                <div>Project Management</div>
+                <div>User Experience</div>
+                <div>Educational Technology</div>
+                <div>HTML & CSS</div>
+            </div>
+        </section>
+
+        <section id="projects">
+            <h2>Projects</h2>
+            <div class="projects">
+                <div class="project">
+                    <img src="project1-thumbnail.jpg" alt="Project 1">
+                    <h3>Use of Generative AI for Special Education Environments</h3>
+                    <p>Identification of key areas where AI-enhanced tools can enhance lesson planning
+for students with ASD by integrating UDL principles.
+• Recommendations for refining AI-generated lesson plans to better support
+inclusive education.
+• A model of an AI-assisted lesson planning tool that teachers can use to generate
+lesson plans for students with ASD</p>
+                </div>
+                <div class="project">
+                    <img src="project2-thumbnail.jpg" alt="Project 2">
+                    <h3>Rec2Tech</h3>
+                    <p>Digital Harbor Foundation (DHF) and University of Maryland Baltimore County (UMBC) collaborated on the Rec-to-Tech Project to understand the Role of Rec Center Educators in Creating Maker-based Technology and Computer Science Learning Hubs for Urban Youth (Rec-to-Tech U).</p>
+                </div>
+              </div>
+        </section>
+
+        <section id="publications">
             <h2>Publications</h2>
             <ul>
-                
-            </ul>
-        </div>
-        <div id="contact" class="section">
+                <li><strong>[An Ecosystem of Support: A US State Government-Supported DIY-AT Program for Residents with Disabilities]</strong> - [Proceedings of the 26th International ACM SIGACCESS Conference on Computers and Accessibility, 2024].</li>
+                        </ul>
+        </section>
+
+        <section id="contact">
             <h2>Contact</h2>
-            <p>If you would like to get in touch, please email me at <a href="mailto:msakowi1@umbc.edu">msakowi1@umbc.edu</a> or connect with me on <a href="https://www.linkedin.com/in/marie-sakowicz-38516ab7" target="_blank">LinkedIn</a>.</p>
-        </div>
+            <p>Email: <a href="mailto:msakowi1@umbc.edu">msakowi1@umbc.edu</a></p>
+            <p>Connect on: 
+                <a href="https://www.linkedin.com/in/marie-sakowicz-38516ab7" target="_blank">LinkedIn</a>, 
+                <a href="https://marie-sakowicz.github.io/" target="_blank">GitHub</a>
+            </p>
+        </section>
     </div>
+
     <footer>
         <p>&copy; 2024 Marie Sakowicz. All rights reserved.</p>
     </footer>
 </body>
 </html>
+
