--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
         }
 
         header {
-            background: linear-gradient(90deg, #0044cc, #0066ff);
+            background: 
+            <img src="Background.jpg" alt="Purple and blue graident background">:
             color: white;
             padding: 40px 10px;
             text-align: center;
@@ -125,7 +126,7 @@
 </head>
 <body>
     <header>
-        <img src="MS1.jpg" alt="Marie Sakowicz">
+        <img src="MS1.JPG" alt="Marie Sakowicz">
         <h1>Marie Sakowicz</h1>
         <p>Ph.D. Student in Human-Centered Computing | Researcher | Innovator</p>
     </header>
