--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         header {
             background: 
-            <img src="Background.jpg" alt="Purple and blue graident background">:
+            img src="Background.jpg" alt="Purple and blue graident background";
             color: white;
             padding: 40px 10px;
             text-align: center;
