--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         header {
             background: 
             img src="Background.jpg" alt="Purple and blue graident background";
-            color: white;
+            color: blue;
             padding: 40px 10px;
             text-align: center;
         }
