--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
 
         header {
             background: 
-            img src="Background.jpg" alt="Purple and blue graident background";
-            color: blue;
+            background: linear-gradient(90deg, #0044cc, #0066ff);
+            background: img src="Background.jpg" alt="Purple and blue graident background";
+            color: white;
             padding: 40px 10px;
             text-align: center;
         }
