--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Marie Sakowicz - Ph.D. Student Portfolio</title>
     <style>
-        /* General Studies */
+        /* General Styles */
         body {
             font-family: 'Arial', sans-serif;
             margin: 0;
@@ -16,8 +16,8 @@
         }
 
         header {
-            background: 
-            background: linear-gradient(90deg, #0044cc, #0066ff);
+            background: url('background.jpg') no-repeat center center;
+            background-size: cover;
             color: white;
             padding: 40px 10px;
             text-align: center;
