--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         }
 
         header {
-            background: url('background.jpg') no-repeat center center;
+            background: url('Background.jpg') no-repeat center center;
             background-size: cover;
             color: white;
             padding: 40px 10px;
