--- a/index.html
+++ b/index.html
@@ -153,7 +153,6 @@
                 <div>Project Management</div>
                 <div>User Experience</div>
                 <div>Educational Technology</div>
-                <div>HTML & CSS</div>
             </div>
         </section>
 
@@ -163,12 +162,9 @@
                 <div class="project">
                     <img src="project1.jpg" alt="Project 1">
                     <h3>Use of Generative AI for Special Education Environments</h3>
-                    <p>Identification of key areas where AI-enhanced tools can enhance lesson planning
-for students with ASD by integrating UDL principles.
-• Recommendations for refining AI-generated lesson plans to better support
-inclusive education.
-• A model of an AI-assisted lesson planning tool that teachers can use to generate
-lesson plans for students with ASD</p>
+                    <p>Identification of key areas where AI-enhanced tools can enhance learning
+for students with ASD by integrating UDL principles. Use of AI-generated lesson plans to better support
+inclusive education. </p>
                 </div>
                 <div class="project">
                     <img src="project2.jpg" alt="Project 2">
