--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         }
 
         header {
-            background: url('Background.jpg') no-repeat center center;
+            background: url('background.jpg') no-repeat center center;
             background-size: cover;
             color: white;
             padding: 40px 10px;
@@ -132,7 +132,9 @@
     </header>
 
     <nav>
-        <a href="#about">About</a>
+        <a href="index.html">Home</a>
+        <a href="about.html">About Me</a>
+        <a href="cv.html">CV</a>
         <a href="#skills">Skills</a>
         <a href="#projects">Projects</a>
         <a href="#publications">Publications</a>
@@ -140,19 +142,13 @@
     </nav>
 
     <div class="container">
-        <section id="about">
-            <h2>About Me</h2>
-            <p>
-                I am a Ph.D. student specializing in Human-Centered Computing at University Maryland Baltimore County. My research focuses on the use of AI-enabled technologies in education. I am passionate about using technology to enhance the human experience and improve learning outcomes.
-            </p>
-        </section>
-
         <section id="skills">
             <h2>Skills</h2>
             <div class="skills">
                 <div>Project Management</div>
                 <div>User Experience</div>
                 <div>Educational Technology</div>
+                <div>HTML & CSS</div>
             </div>
         </section>
 
@@ -162,33 +158,36 @@
                 <div class="project">
                     <img src="project1.jpg" alt="Project 1">
                     <h3>Use of Generative AI for Special Education Environments</h3>
-                    <p>Identification of key areas where AI-enhanced tools can enhance learning
-for students with ASD by integrating UDL principles. Use of AI-generated lesson plans to better support
-inclusive education. </p>
+                    <p>Identification of key areas where AI-enhanced tools can enhance lesson planning
+for students with ASD by integrating UDL principles.
+• Recommendations for refining AI-generated lesson plans to better support
+inclusive education.
+• A model of an AI-assisted lesson planning tool that teachers can use to generate
+lesson plans for students with ASD</p>
                 </div>
                 <div class="project">
                     <img src="project2.jpg" alt="Project 2">
                     <h3>Rec2Tech</h3>
                     <p>Digital Harbor Foundation (DHF) and University of Maryland Baltimore County (UMBC) collaborated on the Rec-to-Tech Project to understand the Role of Rec Center Educators in Creating Maker-based Technology and Computer Science Learning Hubs for Urban Youth (Rec-to-Tech U).</p>
                 </div>
-<div class="project">
+                <div class="project">
                     <img src="project3.jpg" alt="Project 3">
                     <h3>Space For All</h3>
                     <p>In partnership with Digital Harbor, Space for All: Creating Accessible Technology-Rich Makerspaces and Learning Activities for Youth and Young Adults with Autism.</p>
                 </div>
-<div class="project">
+                <div class="project">
                     <img src="project4.jpg" alt="Project 4">
                     <h3>DIY AT</h3>
-                    <p>Do It Yourself Assistive Technology program creates 3D printed Aisstive Tehnology (AT) in partnership with the Maryland Technology Assistance Program.</p>
+                    <p>Do It Yourself Assistive Technology program creates 3D printed Assistive Technology (AT) in partnership with the Maryland Technology Assistance Program.</p>
                 </div>
-              </div>
+            </div>
         </section>
 
         <section id="publications">
             <h2>Publications</h2>
             <ul>
                 <li><strong>[An Ecosystem of Support: A US State Government-Supported DIY-AT Program for Residents with Disabilities]</strong> - [Proceedings of the 26th International ACM SIGACCESS Conference on Computers and Accessibility, 2024].</li>
-                        </ul>
+            </ul>
         </section>
 
         <section id="contact">
@@ -206,4 +205,3 @@ inclusive education. </p>
     </footer>
 </body>
 </html>
-
