--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
     <header>
         <img src="MS1.JPG" alt="Marie Sakowicz">
         <h1>Marie Sakowicz</h1>
-        <p>Ph.D. Student in Human-Centered Computing | Researcher | Innovator</p>
+        <p>Ph.D. Student in Human-Centered Computing | Researcher | Program Manager</p>
     </header>
 
     <nav>
@@ -145,7 +145,7 @@
         <section id="skills">
             <h2>Skills</h2>
             <div class="skills">
-                <div>Project Management</div>
+                <div>Program Management</div>
                 <div>User Experience</div>
                 <div>Educational Technology</div>
                 <div>HTML & CSS</div>
@@ -158,12 +158,9 @@
                 <div class="project">
                     <img src="project1.jpg" alt="Project 1">
                     <h3>Use of Generative AI for Special Education Environments</h3>
-                    <p>Identification of key areas where AI-enhanced tools can enhance lesson planning
-for students with ASD by integrating UDL principles.
-• Recommendations for refining AI-generated lesson plans to better support
-inclusive education.
-• A model of an AI-assisted lesson planning tool that teachers can use to generate
-lesson plans for students with ASD</p>
+                    <p>Identifing key areas where AI-enhanced tools can enhance lesson planning
+for students with ASD by integrating UDL principles. Exloring the use of AI-generated lesson plans to better support
+inclusive education and to create a model for AI-assisted lesson planning.</p>
                 </div>
                 <div class="project">
                     <img src="project2.jpg" alt="Project 2">
@@ -186,7 +183,9 @@ lesson plans for students with ASD</p>
         <section id="publications">
             <h2>Publications</h2>
             <ul>
-                <li><strong>[An Ecosystem of Support: A US State Government-Supported DIY-AT Program for Residents with Disabilities]</strong> - [Proceedings of the 26th International ACM SIGACCESS Conference on Computers and Accessibility, 2024].</li>
+                <li><strong>An Ecosystem of Support: A US State Government-Supported DIY-AT Program for Residents with Disabilities</strong> - Erin Higgins, Marie E Sakowicz, and Foad Hamidi. 2024. In Proceedings of the 26th International ACM SIGACCESS Conference on Computers and Accessibility (ASSETS '24). Association for Computing Machinery, New York, NY, USA, Article 52, 1–16..</li>
+                <p>Read here: <a href="https://doi.org/10.1145/3663548.3675667" target="_blank"<</a></p>
+                
             </ul>
         </section>
 
