--- a/index.html
+++ b/index.html
@@ -15,19 +15,28 @@
             background-color: #f4f4f9;
         }
 
-        header {
+       header {
             background: url('Background.jpg') no-repeat center center;
             background-size: cover;
             color: white;
-            padding: 40px 10px;
-            text-align: center;
+            padding: 40px 20px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 40px;
         }
 
         header img {
             border-radius: 50%;
-            width: 150px;
-            height: 150px;
-            margin-bottom: 15px;
+            width: 200px;
+            height: 200px;
+            object-fit: cover;
+            border: 4px solid white;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        }
+
+        .header-text {
+            text-align: left;
         }
 
         header h1 {
