--- a/about.html
+++ b/about.html
@@ -156,19 +156,17 @@
 </head>
 <body>
     <header>
-        <img src="MS1.JPG" alt="Marie Sakowicz">
-        <h1>Marie Sakowicz</h1>
-        <p>Ph.D. Student in Human-Centered Computing | Researcher | Innovator</p>
+        <h1>About Me - Marie Sakowicz</h1>
     </header>
 
     <nav>
-        <a href="index.html">Home</a>
-        <a href="about.html">About Me</a>
-        <a href="cv.html">CV</a>
-        <a href="index.html#skills">Skills</a>
-        <a href="index.html#projects">Projects</a>
-        <a href="index.html#publications">Publications</a>
-        <a href="index.html#contact">Contact</a>
+        <a href="index.html">Home   |</a>
+        <a href="about.html">About Me   |</a>
+        <a href="cv.html">CV   |</a>
+        <a href="index.html#skills">Skills   |</a>
+        <a href="index.html#projects">Projects   |</a>
+        <a href="index.html#publications">Publications   |</a>
+        <a href="index.html#contact">Contact   |</a>
     </nav>
 
     <div class="container">
@@ -197,7 +195,7 @@
 
                 <h3>Current Research</h3>
                 <p>
-                    My current research explores the intersection of artificial intelligence and special education, with a particular focus on developing AI-enabled tools that support teachers in creating personalized learning experiences for students with autism spectrum disorder (ASD). This work involves close collaboration with educators, students, and families to ensure that the technology solutions we develop are both effective and user-friendly.
+                    My current research explores the intersection of artificial intelligence and special education, with a particular focus on developing AI-enabled tools that support teachers in creating personalized learning experiences for students with autism spectrum disorder (ASD). This work involves close collaboration with educators, students, and families to ensure that the technology solutions developed are both effective and user-friendly.
                 </p>
             </div>
         </section>
