--- a/about.html
+++ b/about.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me - Marie Sakowicz</title>
     <style>
-        /* [Previous styles remain the same] */
-  /* General Styles */
+        /* General Styles */
         body {
             font-family: 'Arial', sans-serif;
             margin: 0;
@@ -41,21 +40,29 @@
             margin: 5px 0 20px;
         }
 
-        nav {
+       nav {
             background: #eee;
             padding: 10px;
             text-align: center;
         }
 
         nav a {
-            margin: 0 15px;
             text-decoration: none;
             color: #0044cc;
-            font-weight: bold;
+            padding: 0 10px;
+        }
+
+        nav span.separator {
+            color: #0044cc;
+            margin: 0 5px;
         }
 
         nav a:hover {
             text-decoration: underline;
+        }
+
+        nav a.current-page {
+            font-weight: 900;
         }
 
         .container {
@@ -159,14 +166,14 @@
         <h1>About Me - Marie Sakowicz</h1>
     </header>
 
-    <nav>
-        <a href="index.html">Home   |</a>
-        <a href="about.html">About Me   |</a>
-        <a href="cv.html">CV   |</a>
-        <a href="index.html#skills">Skills   |</a>
-        <a href="index.html#projects">Projects   |</a>
-        <a href="index.html#publications">Publications   |</a>
-        <a href="index.html#contact">Contact   |</a>
+     <nav>
+        <a href="index.html">Home</a><span class="separator">|</span>
+        <a href="about.html">About Me</a><span class="separator">|</span>
+        <a href="cv.html" class="current-page">CV</a><span class="separator">|</span>
+        <a href="index.html#skills">Skills</a><span class="separator">|</span>
+        <a href="index.html#projects">Projects</a><span class="separator">|</span>
+        <a href="index.html#publications">Publications</a><span class="separator">|</span>
+        <a href="index.html#contact">Contact</a>
     </nav>
 
     <div class="container">
