--- a/about.html
+++ b/about.html
@@ -168,8 +168,8 @@
 
      <nav>
         <a href="index.html">Home</a><span class="separator">|</span>
-        <a href="about.html">About Me</a><span class="separator">|</span>
-        <a href="cv.html" class="current-page">CV</a><span class="separator">|</span>
+        <a href="about.html" class="current-page">About Me</a><span class="separator">|</span>
+        <a href="cv.html" >CV</a><span class="separator">|</span>
         <a href="index.html#skills">Skills</a><span class="separator">|</span>
         <a href="index.html#projects">Projects</a><span class="separator">|</span>
         <a href="index.html#publications">Publications</a><span class="separator">|</span>
