--- a/index.html
+++ b/index.html
@@ -147,11 +147,12 @@
     </style>
 </head>
 <body>
-    <header>
+       <header>
         <img src="MS1.JPG" alt="Marie Sakowicz">
-        <h1>Marie Sakowicz</h1>
-        <br>
-        <p>Ph.D. Student in Human-Centered Computing | Researcher | Program Manager</p>
+        <div class="header-text">
+            <h1>Marie Sakowicz</h1>
+            <p>Ph.D. Student in Human-Centered Computing<br>Researcher | Innovator</p>
+        </div>
     </header>
 
 <nav>
