--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             margin: 0;
             line-height: 1.4;
         }
-        n   nav {
+        nav {
             background: #eee;
             padding: 10px;
             text-align: center;
@@ -76,7 +76,6 @@
 
         nav a.current-page {
             font-weight: 900;
-        }t-decoration: underline;
         }
 
         .container {
