--- a/index.html
+++ b/index.html
@@ -158,25 +158,16 @@
         <a href="index.html"class="current-page">Home</a><span class="separator">|</span>
         <a href="about.html">About Me</a><span class="separator">|</span>
         <a href="cv.html" >CV</a><span class="separator">|</span>
-        <a href="index.html#skills">Skills</a><span class="separator">|</span>
-        <a href="index.html#projects">Projects</a><span class="separator">|</span>
+        <a href="education.html">Education</a><span class="separator">|</span>
+        <a href="index.html#projects">Research Projects</a><span class="separator">|</span>
         <a href="index.html#publications">Publications</a><span class="separator">|</span>
         <a href="index.html#contact">Contact</a>
     </nav>
 
-    <div class="container">
-        <section id="skills">
-            <h2>Skills</h2>
-            <div class="skills">
-                <div>Program Management</div>
-                <div>User Experience</div>
-                <div>Educational Technology</div>
-                <div>HTML & CSS</div>
-            </div>
-        </section>
+    
 
         <section id="projects">
-            <h2>Projects</h2>
+            <h2>Research Projects</h2>
             <div class="projects">
                 <div class="project">
                     <img src="project1.jpg" alt="Project 1">
