--- a/education.html
+++ b/education.html
@@ -1,8 +1,192 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Education - Marie Sakowicz</title>
+    <style>
+          /* General Styles */
+        body {
+            font-family: 'Arial', sans-serif;
+            margin: 0;
+            padding: 0;
+            line-height: 1.6;
+            color: #333;
+            background-color: #f4f4f9;
+        }
+
+        header {
+            background: url('Background.jpg') no-repeat center center;
+            background-size: cover;
+            color: white;
+            padding: 40px 10px;
+            text-align: center;
+        }
+
+        header img {
+            border-radius: 50%;
+            width: 150px;
+            height: 150px;
+            margin-bottom: 15px;
+        }
+
+        header h1 {
+            margin: 0;
+            font-size: 2.5em;
+        }
+
+        header p {
+            font-size: 1.2em;
+            margin: 5px 0 20px;
+        }
+
+            nav {
+            background: #eee;
+            padding: 10px;
+            text-align: center;
+        }
+
+        nav a {
+            text-decoration: none;
+            color: #0044cc;
+            padding: 0 10px;
+        }
+
+        nav span.separator {
+            color: #0044cc;
+            margin: 0 5px;
+        }
+
+        nav a:hover {
+            text-decoration: underline;
+        }
+
+        nav a.current-page {
+            font-weight: 900;
+        }
 
 
+        .container {
+            max-width: 1200px;
+            margin: 20px auto;
+            padding: 20px;
+        }
 
+        section {
+            margin-bottom: 40px;
+        }
 
+        h2 {
+            color: #0044cc;
+            border-bottom: 2px solid #0044cc;
+            display: inline-block;
+            margin-bottom: 10px;
+        }
 
+        .skills {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 15px;
+        }
+
+        .skills div {
+            background: #0044cc;
+            color: white;
+            padding: 10px 15px;
+            border-radius: 5px;
+        }
+
+        .projects {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 20px;
+        }
+
+        .project {
+            background: white;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            padding: 20px;
+            border-radius: 5px;
+            transition: transform 0.3s ease;
+        }
+
+        .project:hover {
+            transform: scale(1.05);
+        }
+
+        .project img {
+            max-width: 100%;
+            border-radius: 5px;
+        }
+
+        footer {
+            text-align: center;
+            padding: 10px 0;
+            background: #0044cc;
+            color: white;
+        }
+
+        @media (max-width: 768px) {
+            header h1 {
+                font-size: 2em;
+            }
+      
+        .cv-section {
+            background: white;
+            padding: 25px;
+            margin-bottom: 20px;
+            border-radius: 8px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        }
+
+        .cv-item {
+            margin-bottom: 20px;
+        }
+
+        .cv-item h3 {
+            color: #0044cc;
+            margin-bottom: 5px;
+        }
+
+        .cv-item .date {
+            color: #666;
+            font-style: italic;
+        }
+
+        .cv-item ul {
+            margin-top: 10px;
+            padding-left: 20px;
+        }
+
+        .download-cv {
+            display: inline-block;
+            background: #0044cc;
+            color: white;
+            padding: 10px 20px;
+            border-radius: 5px;
+            text-decoration: none;
+            margin-bottom: 20px;
+        }
+
+        .download-cv:hover {
+            background: #003399;
+        }
+    </style>
+</head>
+<body>
+    <header>
+          <h1>Education - Marie Sakowicz</h1>
+       
+    </header>
+ <nav>
+        <a href="index.html">Home</a><span class="separator">|</span>
+        <a href="about.html">About Me</a><span class="separator">|</span>
+        <a href="cv.html">CV</a><span class="separator">|</span>
+        <a href="education.html" class="current-page">Education</a><span class="separator">|</span>
+        <a href="index.html#projects">Research Projects</a><span class="separator">|</span>
+        <a href="index.html#publications">Publications</a><span class="separator">|</span>
+        <a href="index.html#contact">Contact</a>
+    </nav>
 
 <div class="container">
         <section id="skills">
@@ -13,4 +197,27 @@
                 <div>Artificial Intelligence</div>
                 <div>Program Management</div>
             </div>
+        </section>
+          </div>
+
+        <section class="cv-section">
+            <h2>Technical Skills</h2>
+            <div class="cv-item">
+                <ul>
+                    <li>Research Methods: Qualitative and Quantitative Analysis, User Studies, Focus Groups, Participatory Design</li>
+                    <li>Programming: HTML, CSS</li>
+                    <li>Tools: Generative AI, Educational Technology Platforms, Assistive Technology Tools</li>
+                </ul>
+            </div>
+        </section>
+    </div>
+
+    <footer>
+        <p>&copy; 2024 Marie Sakowicz. All
+
+
+
+
+
+
         </section>
