--- a/education.html
+++ b/education.html
@@ -188,8 +188,7 @@
         <a href="index.html#contact">Contact</a>
     </nav>
 
-<div class="container">
-        <section id="skills">
+<section class="education-section">
             <h2>Skills</h2>
             <div class="skills">
                 <div>User Experience</div>
@@ -200,9 +199,9 @@
         </section>
           </div>
 
-        <section class="cv-section">
+        <section class="education-section">
             <h2>Technical Skills</h2>
-            <div class="cv-item">
+            <div class="education-item">
                 <ul>
                     <li>Research Methods: Qualitative and Quantitative Analysis, User Studies, Focus Groups, Participatory Design</li>
                     <li>Programming: HTML, CSS</li>
@@ -214,10 +213,6 @@
 
     <footer>
         <p>&copy; 2024 Marie Sakowicz. All
-
-
-
-
-
-
-        </section>
+ </footer>
+</body>
+</html>
