--- a/cv.html
+++ b/cv.html
@@ -182,7 +182,7 @@
         <a href="index.html">Home</a><span class="separator">|</span>
         <a href="about.html">About Me</a><span class="separator">|</span>
         <a href="cv.html" class="current-page">CV</a><span class="separator">|</span>
-        <a href="index.html#skills">Skills</a><span class="separator">|</span>
+        <a href="education.html">Education</a><span class="separator">|</span>
         <a href="index.html#projects">Projects</a><span class="separator">|</span>
         <a href="index.html#publications">Publications</a><span class="separator">|</span>
         <a href="index.html#contact">Contact</a>
