--- a/about.html
+++ b/about.html
@@ -170,8 +170,8 @@
         <a href="index.html">Home</a><span class="separator">|</span>
         <a href="about.html" class="current-page">About Me</a><span class="separator">|</span>
         <a href="cv.html" >CV</a><span class="separator">|</span>
-        <a href="index.html#skills">Skills</a><span class="separator">|</span>
-        <a href="index.html#projects">Projects</a><span class="separator">|</span>
+        <a href="education.html">Education</a><span class="separator">|</span>
+        <a href="index.html#projects">Research Projects</a><span class="separator">|</span>
         <a href="index.html#publications">Publications</a><span class="separator">|</span>
         <a href="index.html#contact">Contact</a>
     </nav>
