--- a/index.html
+++ b/index.html
@@ -143,10 +143,10 @@
                 font-size: 2em;
             }
         }
-    </style>
+  </style>
 </head>
 <body>
-       <header>
+    <header>
         <img src="MS1.JPG" alt="Marie Sakowicz">
         <div class="header-text">
             <h1>Marie Sakowicz</h1>
@@ -154,27 +154,26 @@
         </div>
     </header>
 
-<nav>
-        <a href="index.html"class="current-page">Home</a><span class="separator">|</span>
+    <nav>
+        <a href="index.html" class="current-page">Home</a><span class="separator">|</span>
         <a href="about.html">About Me</a><span class="separator">|</span>
-        <a href="cv.html" >CV</a><span class="separator">|</span>
+        <a href="cv.html">CV</a><span class="separator">|</span>
         <a href="education.html">Education</a><span class="separator">|</span>
         <a href="index.html#projects">Research Projects</a><span class="separator">|</span>
         <a href="index.html#publications">Publications</a><span class="separator">|</span>
         <a href="index.html#contact">Contact</a>
     </nav>
 
-    
-
+    <div class="container">
         <section id="projects">
             <h2>Research Projects</h2>
             <div class="projects">
                 <div class="project">
                     <img src="project1.jpg" alt="Project 1">
                     <h3>Use of Generative AI for Special Education Environments</h3>
-                    <p>Identifing key areas where AI-enhanced tools can enhance lesson planning
-for students with ASD by integrating UDL principles. Exloring the use of AI-generated lesson plans to better support
-inclusive education and to create a model for AI-assisted lesson planning.</p>
+                    <p>Identifying key areas where AI-enhanced tools can enhance lesson planning
+                    for students with ASD by integrating UDL principles. Exploring the use of AI-generated lesson plans to better support
+                    inclusive education and to create a model for AI-assisted lesson planning.</p>
                 </div>
                 <div class="project">
                     <img src="project2.jpg" alt="Project 2">
@@ -197,9 +196,10 @@ inclusive education and to create a model for AI-assisted lesson planning.</p>
         <section id="publications">
             <h2>Publications</h2>
             <ul>
-                <li><strong>An Ecosystem of Support: A US State Government-Supported DIY-AT Program for Residents with Disabilities</strong> - Erin Higgins, Marie E Sakowicz, and Foad Hamidi. 2024. In Proceedings of the 26th International ACM SIGACCESS Conference on Computers and Accessibility (ASSETS '24). Association for Computing Machinery, New York, NY, USA, Article 52, 1–16..</li>
-                <p>Read here: <a href="https://doi.org/10.1145/3663548.3675667" target="_blank"<</a></p>
-                
+                <li>
+                    <strong>An Ecosystem of Support: A US State Government-Supported DIY-AT Program for Residents with Disabilities</strong> - Erin Higgins, Marie E Sakowicz, and Foad Hamidi. 2024. In Proceedings of the 26th International ACM SIGACCESS Conference on Computers and Accessibility (ASSETS '24). Association for Computing Machinery, New York, NY, USA, Article 52, 1–16.
+                    <p>Read here: <a href="https://doi.org/10.1145/3663548.3675667" target="_blank">https://doi.org/10.1145/3663548.3675667</a></p>
+                </li>
             </ul>
         </section>
 
