--- a/education.html
+++ b/education.html
@@ -148,16 +148,7 @@
     </nav>
 
     <div class="container">
-        <section class="cv-section">
-            <h2>Skills</h2>
-            <div class="skills">
-                <div>User Experience</div>
-                <div>Educational Technology</div>
-                <div>Artificial Intelligence</div>
-                <div>Program Management</div>
-            </div>
-        </section>
-
+       
         <section class="cv-section">
             <h2>Education</h2>
             <div class="cv-item">
@@ -179,13 +170,22 @@
             </div>
         </section>
 
+         <section class="cv-section">
+            <h2>Key Interest Areas</h2>
+            <div class="skills">
+                <div>User Experience</div>
+                <div>Educational Technology</div>
+                <div>Artificial Intelligence</div>
+                <div>Program Management</div>
+            </div>
+        </section>
+
         <section class="cv-section">
             <h2>Technical Skills</h2>
             <div class="cv-item">
                 <ul>
                     <li>Research Methods: Qualitative and Quantitative Analysis, User Studies, Focus Groups, Participatory Design</li>
-                    <li>Programming: HTML, CSS</li>
-                    <li>Tools: Generative AI, Educational Technology Platforms, Assistive Technology Tools</li>
+                   <li>Tools: Generative AI, Educational Technology Platforms, Assistive Technology</li>
                 </ul>
             </div>
         </section>
