--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
             <ul>
                 <li>
                     <strong>An Ecosystem of Support: A US State Government-Supported DIY-AT Program for Residents with Disabilities</strong> - Erin Higgins, Marie E Sakowicz, and Foad Hamidi. 2024. In Proceedings of the 26th International ACM SIGACCESS Conference on Computers and Accessibility (ASSETS '24). Association for Computing Machinery, New York, NY, USA, Article 52, 1–16.
-                    <p>Read here: <a href="https://doi.org/10.1145/3663548.3675667" target="_blank">https://doi.org/10.1145/3663548.3675667</a></p>
+                  <a href="https://doi.org/10.1145/3663548.3675667" target="_blank">https://doi.org/10.1145/3663548.3675667</a></p>
                 </li>
             </ul>
         </section>
