--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
         <img src="MS1.JPG" alt="Marie Sakowicz">
         <div class="header-text">
             <h1>Marie Sakowicz</h1>
-            <p>Ph.D. Student in Human-Centered Computing<br>Researcher | Innovator</p>
+            <p>Ph.D. Student in Human-Centered Computing<br>Researcher | Innovator<br><br>Advisor: Dr. Foad Hamidi </p>
         </div>
     </header>
 
@@ -165,6 +165,18 @@
     </nav>
 
     <div class="container">
+         <section id="about">
+            <h2>My Ph.D. Journey</h2>
+            <ul>
+               <p> I entered the HCC Ph.D. program in the Spring of 2024 after completeing two years in Human-Centered Computing (HCC) M.S. program. 
+                   I was drawn to the reseach and wanted to continue my journey as a Ph.D. student. My current research is on the use of AI-enabled technology 
+                   in special education and the impact on accessiblity for students with disabilities. I plan to propose early in the fall semester of 2025. 
+                   This semester I plan to finalize my committee members and continue to analyze the data collected from my study thus far. I also will conduct a participatory design study 
+                   with a special educator to create a lesson generated with AI that is accessible to students with Autism.   
+                              
+               </p>
+            </ul>
+        </section>
         <section id="projects">
             <h2>Research Projects</h2>
             <div class="projects">
