--- a/projects.html
+++ b/projects.html
@@ -177,7 +177,33 @@
     </nav>
 
     <div class="container">
-   
+    <section id="projects">
+            <h2>Research Projects</h2>
+            <div class="projects">
+                <div class="project">
+                    <img src="project1.jpg" alt="Project 1">
+                    <h3>Use of Generative AI for Special Education Environments</h3>
+                    <p>Identifying key areas where AI-enhanced tools can enhance lesson planning
+                    for students with ASD by integrating UDL principles. Exploring the use of AI-generated lesson plans to better support
+                    inclusive education and to create a model for AI-assisted lesson planning.</p>
+                </div>
+                <div class="project">
+                    <img src="project2.jpg" alt="Project 2">
+                    <h3>Rec2Tech</h3>
+                    <p>Digital Harbor Foundation (DHF) and University of Maryland Baltimore County (UMBC) collaborated on the Rec-to-Tech Project to understand the Role of Rec Center Educators in Creating Maker-based Technology and Computer Science Learning Hubs for Urban Youth (Rec-to-Tech U).</p>
+                </div>
+                <div class="project">
+                    <img src="project3.jpg" alt="Project 3">
+                    <h3>Space For All</h3>
+                    <p>In partnership with Digital Harbor, Space for All: Creating Accessible Technology-Rich Makerspaces and Learning Activities for Youth and Young Adults with Autism.</p>
+                </div>
+                <div class="project">
+                    <img src="project4.jpg" alt="Project 4">
+                    <h3>DIY AT</h3>
+                    <p>Do It Yourself Assistive Technology program creates 3D printed Assistive Technology (AT) in partnership with the Maryland Technology Assistance Program.</p>
+                </div>
+            </div>
+        </section>
 
     <footer>
         <p>&copy; 2024 Marie Sakowicz. All rights reserved.</p>
