--- a/cv.html
+++ b/cv.html
@@ -183,7 +183,7 @@
         <a href="about.html">About Me</a><span class="separator">|</span>
         <a href="cv.html" class="current-page">CV</a><span class="separator">|</span>
         <a href="education.html">Education</a><span class="separator">|</span>
-        <a href="index.html#projects">Projects</a><span class="separator">|</span>
+        <a href="projects.html">Research Projects</a><span class="separator">|</span>
         <a href="index.html#publications">Publications</a><span class="separator">|</span>
         <a href="index.html#contact">Contact</a>
     </nav>
