--- a/projects.html
+++ b/projects.html
@@ -171,7 +171,7 @@
         <a href="about.html" class="current-page">About Me</a><span class="separator">|</span>
         <a href="cv.html" >CV</a><span class="separator">|</span>
         <a href="education.html">Education</a><span class="separator">|</span>
-        <a href="index.html#projects">Research Projects</a><span class="separator">|</span>
+        <a href="projects.html">Research Projects</a><span class="separator">|</span>
         <a href="index.html#publications">Publications</a><span class="separator">|</span>
         <a href="index.html#contact">Contact</a>
     </nav>
