--- a/projects.html
+++ b/projects.html
@@ -168,10 +168,10 @@
 
      <nav>
         <a href="index.html">Home</a><span class="separator">|</span>
-        <a href="about.html" class="current-page">About Me</a><span class="separator">|</span>
+        <a href="about.html">About Me</a><span class="separator">|</span>
         <a href="cv.html" >CV</a><span class="separator">|</span>
         <a href="education.html">Education</a><span class="separator">|</span>
-        <a href="projects.html">Research Projects</a><span class="separator">|</span>
+        <a href="projects.html" class="current-page">Research Projects</a><span class="separator">|</span>
         <a href="index.html#publications">Publications</a><span class="separator">|</span>
         <a href="index.html#contact">Contact</a>
     </nav>
