--- a/education.html
+++ b/education.html
@@ -156,11 +156,11 @@
                 <div class="date">2024 - Present</div>
                 <p>University of Maryland Baltimore County (UMBC)</p>
 
-                <h3>Masters in Human-Centered Computing</h3>
+                <h3>M.S. Human-Centered Computing</h3>
                 <div class="date">May 2024</div>
                 <p>University of Maryland Baltimore County (UMBC)</p>
 
-                <h3>Masters in Educational Technology</h3>
+                <h3>M.Ed. Educational Technology</h3>
                 <div class="date">May 2005</div>
                 <p>Northern Arizona University (NAU)</p>
 
