--- a/index.html
+++ b/index.html
@@ -150,7 +150,8 @@
         <img src="MS1.JPG" alt="Marie Sakowicz">
         <div class="header-text">
             <h1>Marie Sakowicz</h1>
-            <p>Ph.D. Student in Human-Centered Computing<br>Researcher | Innovator<br><br>Advisor: Dr. Foad Hamidi </p>
+            <p>Ph.D. Student in Human-Centered Computing<br>University of Maryland, Baltimore County<br>
+                Project Manager | Researcher | Innovator<br><br>Advisor: Dr. Foad Hamidi </p>
         </div>
     </header>
 
