--- a/education.html
+++ b/education.html
@@ -171,7 +171,7 @@
         </section>
 
          <section class="cv-section">
-            <h2>Key Interest Areas</h2>
+            <h2>Skills</h2>
             <div class="skills">
                 <div>User Experience</div>
                 <div>Educational Technology</div>
