--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
         <div class="header-text">
             <h1>Marie Sakowicz</h1>
             <p>Ph.D. Student in Human-Centered Computing<br>University of Maryland, Baltimore County<br>
-                Project Manager | Researcher | Innovator<br><br>Advisor: Dr. Foad Hamidi </p>
+                Program Manager | Researcher | Innovator<br><br>Advisor: Dr. Foad Hamidi </p>
         </div>
     </header>
 
