--- a/about.html
+++ b/about.html
@@ -205,6 +205,32 @@
                     My current research explores the intersection of artificial intelligence and special education, with a particular focus on developing AI-enabled tools that support teachers in creating personalized learning experiences for students with autism spectrum disorder (ASD). This work involves close collaboration with educators, students, and families to ensure that the technology solutions developed are both effective and user-friendly.
                 </p>
             </div>
+                   <h3>Dissertation Plans</h3>
+                <p>
+                    As I work towards completing my disseration, this is my planned timeline. <br>
+                    <h2>Spring 2025</h2>
+                    <li>Complete the comprehesive exam and portfolio review. </li>
+                    <li>Continue my research project on the use of Generative AI in Special Education by conducting a particapatory design study with special edcuators on accessible AI generated leasson plans.</li>
+                    <li>Start writing my proposal document.</li>
+                    <li>Present a talk on my research at N-SEA 2025 (the National Symposium on Equitable AI).</li>
+                    <li>Suport the Digital Harbor Space for All project.</li>
+                    <li>Finalize my committee members.</li>
+                    <br>
+                    <h2>Fall 2025</h2>
+                    <li>Propose early in the semester</li>
+                    <li>Continue to coduct reasearch to support my Dissertation and anyalze the data collected.</li>
+                    <li>Continue to support the Digital Harbor Space for All project.</li>
+                    <li>Start writting my Defense</li>
+                    <br>
+                    <h2>Spring 2026</h2>
+                    <li>Continue research and anaysis of data.</li>
+                    <li>Continue to support the Digital Harbor Space for All project.</li>
+                    <li>Finailze my Defense document</li>
+                    <li>Prepare for my Defense</li>
+                </p>
+        
+            </div>
+        </section>
         </section>
     </div>
 
